fixed error in getBicicletas_NoContent in BicicletaControllerTest